# PlayStation-Launcher-by-Soryyz

./: .gitignore  LICENSE  README.md  index.html  package.json
src/: App.css  App.tsx  locales.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  discord.rs  games.rs  lib.rs  media.rs  tags.rs
src/components/: ControllerIcons.tsx  GameDetails.tsx  GamesLibrary.tsx  MediaScreen.tsx  MediaViewer.tsx  SettingsScreen.tsx  VideoIntro.tsx  VirtualKeyboard.tsx
src/hooks/: useGamepad.ts  useLocale.ts  vibrate.ts
