[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.release]
opt-level = 0
strip = "none"
lto = false
codegen-units = 32
incremental = true
debug = 0

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
winreg = "0.52"
chrono = "0.4"
base64 = "0.22.1"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
discord-rich-presence = "1.1.0"
uds_windows = "1.2.1"
